--- a/index.html
+++ b/index.html
@@ -11,42 +11,67 @@
   <header class="main-header">
     <div class="header-content container">
       <div class="logo">osu!GD Review</div>
-      <!-- Updated search bar structure -->
+
       <div class="search">
         <input type="text" class="search__input" placeholder="Search osu! profiles...">
-        <button class="search__button">
-          <svg class="search__icon" aria-hidden="true" viewBox="0 0 24 24">
+        <svg class="search__icon" aria-hidden="true" viewBox="0 0 24 24">
             <g>
               <path d="M21.53 20.47l-3.66-3.66C19.195 15.24 20 13.214 20 11c0-4.97-4.03-9-9-9s-9 4.03-9 9 4.03 9 9 9c2.215 0 4.24-.804 5.808-2.13l3.66 3.66c.147.146.34.22.53.22s.385-.073.53-.22c.295-.293.295-.767.002-1.06zM3.5 11c0-4.135 3.365-7.5 7.5-7.5s7.5 3.365 7.5 7.5-3.365 7.5-7.5 7.5-7.5-3.365-7.5-7.5z"></path>
             </g>
-          </svg>
-        </button>
+        </svg>
       </div>
-      <div class="auth-buttons">
+
+      <div class="auth-buttons" id="logged-out-buttons">
         <button class="sign-button">Sign In</button>
-        <button class="sign-button">Sign Up</button>
       </div>
+
+      <div class="profile-dropdown" id="logged-in-profile">
+        <button class="profile-dropdown-toggle">
+          <img class="profile-avatar-small" src="https://a.ppy.sh/124493" alt="User Avatar" />
+        </button>
+        <div class="profile-dropdown-menu">
+          <a href="#" class="profile-dropdown-item">Home</a>
+          <a href="#" class="profile-dropdown-item">My Profile</a>
+          <a href="#" class="profile-dropdown-item">Profile Settings</a>
+          <a href="#" class="profile-dropdown-item">My Reviews</a>
+          <a href="#" class="profile-dropdown-item">My Maps</a>
+          <a href="#" class="profile-dropdown-item sign-out-button">Sign Out</a>
+        </div>
+      </div>
+
     </div>
   </header>
 
-  <div class="container">
-    <h1>osu! GDer Review</h1>
+  <main class="container">
+    <section id="mappers">
+      </section>
 
-    <div id="mappers"></div> <!-- This will now contain both avatar and mapper text info -->
+    <section class="card average-rating-card">
+      <h2>Average Review Rating</h2>
+      <div class="average-rating-display">
+        <span id="average-rating-value" class="stat-value"></span>
+        <div id="average-rating-stars" class="stars-display"></div>
+      </div>
+    </section>
+    <section class="review-section">
+      <h2>Recent Reviews</h2>
+      <div id="reviews">
+        </div>
+    </section>
 
-    <div class="review-section">
-      <h2>GD Reviews</h2>
-      <div id="reviews"></div>
-    </div>
-
-    <div class="form-section">
+    <section class="form-section card">
       <h2>Leave a Review</h2>
-      <div id="stars"></div>
-      <textarea id="comment" rows="4" placeholder="Write a review..."></textarea>
-      <button onclick="submitReview()">Submit</button>
-    </div>
-  </div>
+      <div class="rating-input">
+        <span class="label">Your Rating:</span>
+        <div id="stars">
+          </div>
+      </div>
+      <textarea id="review-comment" placeholder="Write your review here..."></textarea>
+      <button id="submit-review-button">Submit Review</button>
+    </section>
+  </main>
 
-  <script src="script.js"></script>
+  <script src="./script.js"></script>
+  <script src="./login.js"></script>
 </body>
 </html>
